--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:
 #Comment out url when working locally to resolve base urls correctly
 #url: http://hybrid-pedagogy.github.io/openmusictheory
 #baseurl: http://hybrid-pedagogy.github.io/openmusictheory
-url: /Users/krisshaffer/Websites/openmusictheory
+baseurl: /Users/krisshaffer/Websites/openmusictheory
 
 
 # Owner/author information
