pulled new theme into gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title:            Open Music Theory
 tagline:          
 description:      
 #Comment out url when working locally to resolve base urls correctly
-#url: http://hybrid-pedagogy.github.io/openmusictheory
-#baseurl: http://hybrid-pedagogy.github.io/openmusictheory
-baseurl: /Users/krisshaffer/Websites/openmusictheory
+url: http://hybrid-pedagogy.github.io/openmusictheory
+baseurl: http://hybrid-pedagogy.github.io/openmusictheory
+#baseurl: /Users/krisshaffer/Websites/openmusictheory
 
 
 # Owner/author information
